objects/BorrowersStatement__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Disable_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Domain__c</fullName>
        <label>Login Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_URL__c</fullName>
        <label>Portal URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Period_Months__c</fullName>
        <label>Statement Period(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <label>website</label>
        <type>Url</type>
    </fields>
    <label>BorrowersStatement</label>
</CustomObject>